# sqlcrucible

./: .gitignore  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1/comparison/: index.html
0.2.1/getting-started/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/comparison/: index.html
0.2.2/getting-started/: index.html
0.2.2/search/: search_index.json
0.2.3/: 404.html  index.html  objects.inv  sitemap.xml
0.2.3/comparison/: index.html
0.2.3/getting-started/: index.html
0.2.3/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/comparison/: index.html
0.3.0/getting-started/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/comparison/: index.html
0.3.1/getting-started/: index.html
0.3.1/search/: search_index.json
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/comparison/: index.html
0.3.2/getting-started/: index.html
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/comparison/: index.html
0.3.3/getting-started/: index.html
0.3.3/search/: search_index.json
0.3.4/: 404.html  index.html  sitemap.xml
0.3.4/comparison/: index.html
0.3.4/getting-started/: index.html
0.3.4/search/: search_index.json
0.3.5/: 404.html  index.html  objects.inv  sitemap.xml
0.3.5/comparison/: index.html
0.3.5/getting-started/: index.html
docs/: CNAME  comparison.md  getting-started.md  index.md
docs/guide/: advanced.md  defining-entities.md  field-mapping.md  inheritance.md  orm-descriptors.md  relationships.md  type-conversion.md
docs/reference/: api.md
src/sqlcrucible/: __init__.py
tests/: strategies.py
tests/_types/: test_annotations.py  test_forward_refs.py  (+2 more)
(+163 files in other folders)
